# pyansys-mcp

./: .gitignore  dpf_tunnel.py  host_solver.py  main.py  pyproject.toml  server.py  solve_block.py  solve_block_multi.py  solve_combined.py
.agent/: README.md  manifest.json
.cursor/rules/: pydyna.mdc
